--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
   "name": "@flywheel-jp/flywheel-standard",
   "private": true,
-  "repository": "https://github.com/flywheel-jp/flywheel-standard"
+  "repository": "https://github.com/flywheel-jp/flywheel-standard",
+  "dependencies": {
+    "docsify-cli": "^4.3.0"
+  }
 }
