--- a/.github/workflows/upload.yml
+++ b/.github/workflows/upload.yml
@@ -12,7 +12,12 @@ jobs:
         uses: actions/gcloud/auth@master
         env:
           GCLOUD_AUTH: ${{ secrets.GCLOUD_AUTH }}
+      # gsutil skips symlink directory "public/docs"
       - name: Upload documents to flywheel-mouseion bucket
         uses: docker://gcr.io/cloud-builders/gsutil
         with:
-          args: -m rsync -d -r docs gs://flywheel-mouseion/flywheel-standard
+          args: -m rsync -d -r public gs://flywheel-mouseion/flywheel-standard
+      # ... so sync "public/docs" directory manually.
+      - uses: docker://gcr.io/cloud-builders/gsutil
+        with:
+          args: -m rsync -d -r public/docs gs://flywheel-mouseion/flywheel-standard/docs
